--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header {
 }
 
 body {
-    
+
     background: #ffffff;
 }
 
@@ -45,85 +45,86 @@ nav a:hover {
     text-decoration: underline;
 }
 
-/* Conteúdo do Site */
+/* Fim menu navegação*/
 
-
-.cup_world {
-    height: 50px;
-    display: block
-}
 
 .first_title {
-    text-align: center;
-    font-weight: bolder;
-    text-transform: uppercase;
-    letter-spacing: 10px;
-    color: #420d09;
-    font-size: 35px;
-    height: 100px;
-    margin-top: 100px;
+  font-size: 50px;
 }
 
- p {
-    font-style: italic;
-    font-size: 20px;
+h2 {
+  text-align: center;
+  font-weight: bold;
 }
 
-.container {
+p {
+  font-family:courier,arial,helvetica;
+  font-size: 20px;
+  line-height: 1.6;
+}
+
+.cup_world {
     max-width: 1200px;
     margin: 0 auto;
-    border: 1px solid;
-    
+    margin-top: 75px;
+    margin-bottom: 75px;
 }
 
-.box_container {
+.cup_world p {
+    padding: 10px 0;
+    margin-top: 75px;
+}
+
+.cup_world .first_title {
+    padding: 20px 0;
+    text-align: center;
+}
+
+.cp_img_collection {
     max-width: 1200px;
     margin: 0 auto;
-    border: 1px solid;
-    display: grid;
-    grid-template-areas:
-    "auto auto" ;
-    grid-gap: 20px;
-    
-}
-
-section img {
-    width: 100%;
-    border-radius: 20px;
-}
-
-.imagem1 , .imagem2 {
-    max-width: 300px;
-    min-width: 200px;
-    height: 300px;
-    background-color: #333;
-    border-radius: 20px;
-    grid-area: "item";
-    grid-row: "imagem1";
-}
-
-.primeiro_bloco {
-    height: 50px;
-    display: block
-}
-
-.primeiro_bloco_1, p {
     text-align: center;
-    font-weight: bolder;
-    text-transform: uppercase;
-    letter-spacing: 10px;
-    color: #420d09;
-    font-size: 30px;
-    height: 100px;
-    margin-top: 100px;
 }
 
-.catar_bloco_1 {
-    display: inline;
-    width: 100%;
-    float: left;
+.cp_img {
+  display: inline-block;
+  width: auto;
+  margin: 20px 40px;
 }
 
+.cp_img img{
+  height: 350px;
+  border: 2px solid #6e6e6e;
+  border-radius: 12px;
+  box-shadow: 11px 12px 15px -1px rgba(148,148,148,0.52);
+}
 
+.catar_bloco h2 {
+  font-size: 50px;
+}
 
+.catar_bloco {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 10px 0;
+  margin-top: 75px;
+  margin-bottom: 75px;
+}
 
+.catar_bloco p {
+    padding: 10px 0;
+    margin-top: 75px;
+    margin-bottom: 75px;
+}
+
+.cp_img_catar {
+  max-width: 1200px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.cp_img_catar img {
+  border-radius: 12px;
+  box-shadow: 11px 12px 15px -1px rgba(148,148,148,0.52);
+  margin-top: 50px;
+}
